# siprustserver

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  MIGRATION_STATUS.md  README.md  TODO_FixCallTerminateOnBackup.md  claude-auto-tmux.sh  clippy.toml  justfile  skills-lock.json
crates/announcement/: Cargo.toml
crates/announcement/src/: lib.rs  mscml.rs
crates/b2bua/: Cargo.toml
crates/b2bua-harness/: Cargo.toml
crates/b2bua-harness/src/: failover.rs  lib.rs
crates/b2bua-harness/tests/: announcement.rs  basic_call.rs  basic_call_media.rs  bye_no_200_reap.rs  cancel_200_crossing.rs  cancel_200_crossing_internal.rs  cancel_after_answer.rs  cancel_during_slow_decision.rs  cdr_write_before_remove.rs  decision_context.rs  decision_deadline.rs  failover.rs  failure.rs  fake_prack.rs  info_body_relay.rs  keepalive.rs  keepalive_481.rs  keepalive_configurable_interval.rs  keepalive_reap_both_directions.rs  keepalive_timeout.rs  keepalive_via_proxy.rs  limit_cases.rs  limiter.rs  limiter_ha.rs  limiter_refresh.rs  numbering_plan.rs  orphan_reject_no_leak.rs  prack.rs  prack_forking.rs  prack_update_forking.rs  promote_pem.rs  proxy_b2bua.rs  reack_retransmitted_2xx.rs  realcall_functional.rs  reaper.rs  reaper_liveness.rs  refer_allow.rs  refer_c_realign.rs  refer_full_transfer.rs  refer_gating.rs  (+21 more)
crates/b2bua-runner/: Cargo.toml
crates/b2bua-runner-kit/: Cargo.toml
crates/b2bua-runner-kit/src/: lib.rs
crates/b2bua-runner/src/: cdr_rabbitmq.rs  lib.rs  main.rs
crates/b2bua-runner/tests/: overload_dashboard_names.rs  state_machine_docs.rs
crates/b2bua-sdk/: Cargo.toml
crates/b2bua-sdk/src/: config.rs  event.rs  lib.rs  model.rs  service.rs
crates/b2bua-sdk/tests/: sdk_surface.rs
crates/b2bua/src/: b2bua_core.rs  config.rs  dispatch.rs  drain.rs  effects.rs  event.rs  initial_invite.rs  lib.rs  limiter.rs  limiter_http.rs  metrics.rs  obligations.rs  overload.rs  peer_failures.rs  reaper.rs  router.rs  stack_identity.rs  target_admission.rs  tier1_brake.rs  timers.rs
crates/b2bua/tests/: reaper_ledger.rs  rules.rs  service_macro.rs  tier1_brake.rs  udp_transport_metrics.rs
crates/call/: Cargo.toml  build.rs
crates/call-limiter/: Cargo.toml
crates/call-limiter-runner/: Cargo.toml
crates/call-limiter-runner/src/: main.rs
crates/call-limiter-runner/tests/: smoke.rs
crates/call-limiter/src/: lib.rs  metrics.rs  server.rs  window.rs  wire.rs
crates/call-limiter/tests/: oracle.rs  window.rs
crates/call/proto/: call.proto
crates/call/src/: callref.rs  codec.rs  features.rs  helpers.rs  lib.rs  model.rs  proto.rs
crates/call/tests/: callref.rs  codec_protobuf.rs  codec_roundtrip.rs  model_helpers.rs  proto_codegen.rs
crates/cdr-consumer-runner/: Cargo.toml
crates/cdr-consumer-runner/src/: main.rs
crates/e2e-cli/: Cargo.toml
crates/e2e-cli/src/: lib.rs  main.rs
crates/e2e-cli/tests/: cli.rs
crates/e2e-core/: Cargo.toml
crates/e2e-core/src/: checks.rs  egress.rs  infra.rs  lib.rs  media.rs  model.rs  registrar.rs  result.rs  run.rs  schema_gen.rs  selector.rs  shape.rs
crates/e2e-core/tests/: checks.rs  job.rs  model.rs  portability.rs  result.rs  shapes_media.rs
crates/e2e-web/: Cargo.toml
crates/e2e-web/src/: lib.rs  main.rs
crates/e2e-web/tests/: web.rs
crates/failover-harness/: Cargo.toml
crates/failover-harness/src/: combine.rs  harness.rs  lib.rs  oracle.rs  runner.rs  scenario.rs
crates/failover-harness/tests/: call_terminate_on_backup.rs  dual_face.rs  failover.rs  limiter_ha.rs  reject_final_loss_via_lb.rs  silent_callee_no_answer_via_lb.rs  transparent_v1.rs  via_lb_reroute_glare.rs
crates/flamegraph-util/: Cargo.toml
crates/flamegraph-util/src/: lib.rs
crates/ha-harness/: Cargo.toml
crates/ha-harness/src/: cluster.rs  lib.rs  node.rs  report.rs
crates/ha-harness/tests/: convergence_property.rs  faults_and_report.rs  scenarios.rs  split_brain.rs
crates/http-net/: Cargo.toml
crates/http-net/src/: lib.rs
crates/http-net/tests/: real.rs  simulated.rs
crates/jemalloc-stats/: Cargo.toml
crates/jemalloc-stats/src/: lib.rs
crates/layer-harness/: Cargo.toml
crates/layer-harness/src/: anomaly.rs  contracts.rs  event_sequencer.rs  lib.rs  recorder.rs  recording.rs  run_context.rs  scenario.rs  time.rs
crates/layer-harness/tests/: recorder.rs
crates/loadgen/: Cargo.toml  README.md
crates/loadgen/src/: app.rs  case.rs  chaos.rs  class.rs  ctx.rs  driver.rs  lib.rs  mux.rs  rate.rs  report.rs  scope.rs  waiver.rs
crates/loadgen/tests/: fake_net.rs  governor.rs  mux_claims.rs  smoke.rs  waiver_lane.rs
crates/media/: Cargo.toml
crates/media-harness/: Cargo.toml
crates/media-harness/src/: lib.rs  negotiate.rs
crates/media-harness/tests/: audio_comparator.rs  media_e2e.rs
crates/media/src/: lib.rs  transport.rs
crates/media/tests/: rtp_framing.rs  rtp_media.rs  rtp_media_live.rs  sdp_negotiation.rs
crates/probe-http/: Cargo.toml
crates/probe-http/src/: lib.rs
crates/repl-net/: Cargo.toml
crates/repl-net/src/: codec.rs  frame.rs  framing.rs  lib.rs
crates/repl-net/tests/: property.rs  roundtrip.rs
crates/scenario-harness/: Cargo.toml
crates/scenario-harness/src/: agent.rs  anchors.rs  callee_group.rs  callflow.rs  claim.rs  dsl.rs  egress.rs  legpick.rs  lib.rs  loadbind.rs  run.rs
crates/scenario-harness/tests/: ack_obligation.rs  actor_plan_deviations.rs  alice_calls_bob.rs  any_method_prack_update.rs  callee_group.rs  deviations.rs  early_dialogs.rs  fluent_dialog.rs  proxy_record_route.rs  template_emission.rs  timed_dialog.rs  waivers.rs
crates/seq-report/: Cargo.toml
crates/seq-report/src/: html.rs  lib.rs  normalize.rs  text.rs
crates/sip-clock/: Cargo.toml
crates/sip-clock/src/: lib.rs
crates/sip-message/: Cargo.toml
crates/sip-message/benches/: sip_parser.rs
crates/sip-message/src/: deviation.rs  error.rs  generators.rs  lib.rs  message_helpers.rs  method.rs  remote_target.rs  sdp.rs  serializer.rs  sipfrag.rs  sniff.rs  template.rs  template_match.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+538 files in other folders)
