[workspace]
resolver = "2"
members = [
    "crates/sip-message",
    "crates/sip-clock",
    "crates/layer-harness",
    "crates/sip-net",
    "crates/sip-txn",
    "crates/call",
    "crates/sip-proxy",
    "crates/topology",
    "crates/repl-net",
    "crates/http-net",
    "crates/call-limiter",
    "crates/seq-report",
    "crates/scenario-harness",
    "crates/media",
    "crates/media-harness",
    "crates/b2bua-sdk",
    "crates/announcement",
    "crates/b2bua",
    "crates/b2bua-harness",
    "crates/ha-harness",
    "crates/failover-harness",
    "crates/flamegraph-util",
    "crates/probe-http",
    "crates/jemalloc-stats",
    "crates/b2bua-runner-kit",
    "crates/b2bua-runner",
    "crates/sip-proxy-runner",
    "crates/call-limiter-runner",
    "crates/cdr-consumer-runner",
    "crates/callshapes",
    "crates/e2e-model",
    "crates/e2e-core",
    "crates/e2e-cli",
    "crates/e2e-web",
    "crates/loadgen",
    "crates/sip-pcap",
    "xtask",
]

# One crate per migration layer (see MIGRATION_STATUS.md). Slice 1 is the
# pure SIP message layer (`sip-message`); slice 2 adds the network layer
# (`sip-net`). `layer-harness` is the test-only contract+recording foundation
# (Recorder / RunContext / severity / recording helpers) shared by sip-net and
# every later layer's `contracts` module — it carries no production code and no
# domain types, so it does not contradict ADR-0002's "no premature shared
# types crate" reasoning (that is about *production* cross-layer cycles). A
# shared *production* foundation/types crate is still extracted only when the
# first production cross-layer cycle forces it. See ADR-0002 + ADR-0004.
#
# `sip-clock` is a leaf utility crate (depends only on tokio): the injectable
# wall-clock `now_ms()` timestamp seam. It is *production* code but creates no
# cross-layer cycle (nothing depends back on its consumers), so it sidesteps the
# same ADR-0002 concern by being a pure leaf. Behavioural time stays on
# `tokio::time` directly — this crate is timestamps only. See MIGRATION_PLAN_B2B §2.

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# rvoip-sip-core is the dev-only parity oracle for the message layer.
# Pinned via path against the vendored source when present; see
# docs/adr/0001-port-custom-parser-rvoip-as-parity-oracle.md.
# rvoip-sip-core = { path = "portsource/sipjsserver/repos/rvoip/crates/rvoip-sip-core" }
thiserror = "2"
proptest = "1"
criterion = "0.5"
# Network layer onward: all async I/O + logic-path time goes through tokio
# (see docs/MIGRATION_STRATEGY.md, Effect→Rust construct map).
tokio = { version = "1", features = ["full"] }
# DelayQueue (the transaction layer's single timer-wheel driver — see
# docs/adr/0007). `time` pulls in the keyed timer set; rides `tokio::time`, so
# `pause`/`advance` controls it in tests exactly like every other behavioural
# timer. Not a hand-rolled wheel (sip-clock ADR's caveat) — it IS tokio's.
tokio-util = { version = "0.7", features = ["time"] }
async-trait = "0.1"
# CallContext data-model layer (`crates/call`): the call body is a pure
# serializable struct tree. `rmp-serde` default (positional/array) encoding
# keeps field names off the wire (smallest + least CPU); `serde_bytes` keeps
# SDP/INVITE byte fields as msgpack `bin`, not an int array. `serde_json::Value`
# carries the per-service opaque `ext` slices losslessly. See ADR-0008.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# E2E test-management JSON model (ADR-0018): authored Test cases / Endpoint
# configs / Check sets derive `JsonSchema`; `xtask e2e-schema` emits committed
# `e2e/schemas/*.schema.json` the authored files reference via `$schema`.
# `regex` backs the check engine's `regex` op (ADR-0019 field grammar).
schemars = "1"
regex = "1"
# E2E test-management website (`e2e-web`, ADR-0018 Phase I): axum serves the
# content-negotiated route set (HTML + JSON on ONE handler per resource), maud
# renders the HTML server-side (htmx does fragment polling client-side, loaded
# from CDN — no JS build step). TEST-TOOLING ONLY, never in a runner.
axum = "0.8"
maud = "0.27"
serde_bytes = "0.11"
rmp-serde = "1"
# HA replication wire codec (`crates/repl-net`, slice S2). The five replication
# frames are positional-msgpack arrays (tag = element 0) hand-encoded with the
# low-level `rmp` crate for exact positional control — serde-derived enums do
# not emit clean `[tag, ...]` arrays. `rmp` is already in the tree transitively
# via `rmp-serde`; declared here directly so repl-net can drive it. See ADR-0011
# X9 / ADR-0008 (positional msgpack ethos).
rmp = "0.8"
# Front proxy (`crates/sip-proxy`, slice 9). The routing cookie stamped on the
# Record-Route is HMAC-SHA256 truncated to 128 bits (`hmac` + `sha2`),
# base64url-encoded (`base64`); `subtle` is the constant-time compare
# (`timingSafeEqual` analogue) used to verify it. `sha1` is NOT a crypto
# primitive here — it is the fast, well-distributed hash behind rendezvous
# (HRW) worker selection (top 8 bytes as a u64). `arc-swap` backs the lock-free
# worker-registry snapshot read on the routing hot path. See ADR-0009.
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
subtle = "2"
arc-swap = "1"
# `socket2` builds the proxy's SO_REUSEPORT recv shards (tokio's UdpSocket has
# no reuse-port knob): N sockets on one port, kernel flow-hashing keeps a given
# UAC src:port pinned to one shard so per-flow ordering is preserved. Pass 9.
socket2 = "0.6"
# Media layer (`crates/media`, slice S-media). `rtp`/`rtcp` are the webrtc-rs
# wire-codec crates used as the independent framing *witness* against our
# hand-rolled RFC 3550 encoder (the rtp.js role in the TS port). `rustfft` backs
# the audio comparator's MFCC signature in the test-only `media-harness`. See
# docs/plan/lexical-doodling-boot.md.
rtp = "0.12"
rtcp = "0.12"
rustfft = "6"
# `bytes` is the buffer type `rtp`/`rtcp` marshal to / unmarshal from;
# `webrtc-util` provides the Marshal/Unmarshal traits they implement.
bytes = "1"
webrtc-util = "0.10"
# CDR-on-RabbitMQ sink (b2bua-runner) + the dedicated CDR metrics consumer
# (cdr-consumer-runner). `lapin` is the async AMQP 0-9-1 client; it is runtime-
# agnostic, so the two `*-trait` shims bind its executor/reactor to the same
# tokio runtime everything else runs on (no second async runtime). Producer-side
# the existing `BufferedCdrWriter` bounded queue is preserved in front of the
# sink (drop-on-overload), and the broker queue is additionally bounded with
# `x-max-length` + drop-head overflow — the "max buffer" guarantee end to end.
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

# Keep line tables in release builds so on-demand pprof CPU flamegraphs (the
# /debug/flamegraph route on the b2bua-worker + front-proxy metrics servers,
# see crates/flamegraph-util) symbolize to function/file:line. This adds
# debuginfo ONLY — opt-level/lto/codegen-units are untouched — so the captured
# profile still reflects the fully-optimized production binary. The Dockerfile
# does not strip, so symbols reach the running container.
[profile.release]
debug = "line-tables-only"

# Dev/test builds default to full DWARF (`debug = 2`), which on this
# test-heavy workspace bloats `target/debug/deps` to tens of GB — the bulk of
# it per-test-binary variable-level debug info almost never used interactively.
# `line-tables-only` keeps file:line in panic backtraces (load-bearing for the
# PanicDump wire-trace dump and general test triage) while dropping the
# variable info, cutting the debug target by roughly half. `test`/`bench`
# inherit these from `dev`/`release`, so `cargo test` is covered.
[profile.dev]
debug = "line-tables-only"

# First-party code is unsafe-free by policy. Every member crate opts in with
# `[lints] workspace = true`, turning a stray `unsafe` block into a hard compile
# error rather than a silent perf shortcut nobody reviewed. `forbid` (stronger
# than `deny`) cannot be locally re-enabled with `#[allow(unsafe_code)]`. The
# ONE exception is `crates/jemalloc-stats`, whose two `mallctl` FFI calls are
# irreducibly unsafe — it does NOT opt into this table and instead pins its own
# `deny` + a narrow `#[allow(unsafe_code)]` on each documented call site. This
# governs OUR source only; dependencies (tokio, jemalloc, …) use unsafe freely
# and are unaffected. See ADR-discussion / jemalloc-stats/src/lib.rs SAFETY notes.
[workspace.lints.rust]
unsafe_code = "forbid"
