[package]
name = "b2bua-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Test-only harness: binds a real `b2bua` B2buaCore as a System-Under-Test on the scenario-harness simulated network for deterministic alice ↔ b2bua ↔ bob e2e tests. Carries no production code."

[dependencies]
b2bua = { path = "../b2bua" }
call = { path = "../call" }
sip-message = { path = "../sip-message" }
sip-net = { path = "../sip-net" }
sip-txn = { path = "../sip-txn" }
sip-clock = { path = "../sip-clock", features = ["testkit"] }
scenario-harness = { path = "../scenario-harness" }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Slice 3b: real RTP media through the signalling-only B2BUA. Media flows
# peer-to-peer on a separate simulated fabric to the addresses the SDP (relayed
# by the B2BUA) advertises; the classifier proves it reached the right peer.
media = { path = "../media" }
media-harness = { path = "../media-harness" }
# Limiter scenarios: a real LimiterServer on the simulated HTTP fabric, reached
# by the b2bua's HttpCallLimiter.
http-net = { path = "../http-net" }
call-limiter = { path = "../call-limiter" }
serde_json = { workspace = true }
# The `common/mod.rs` proxy helper (keepalive_via_proxy / proxy_b2bua tests)
# binds a real LoadBalancer SUT. The multi-node failover harness moved to the
# `failover-harness` crate (ADR-0013 §0), so this is the only remaining proxy
# user and it is test-only.
sip-proxy = { path = "../sip-proxy" }
