[package]
name = "b2bua-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Test-only harness: binds a real `b2bua` B2buaCore as a System-Under-Test on the scenario-harness simulated network for deterministic alice ↔ b2bua ↔ bob e2e tests. Carries no production code."

[dependencies]
b2bua = { path = "../b2bua" }
call = { path = "../call" }
sip-message = { path = "../sip-message" }
sip-net = { path = "../sip-net" }
sip-txn = { path = "../sip-txn" }
sip-clock = { path = "../sip-clock", features = ["testkit"] }
scenario-harness = { path = "../scenario-harness" }
tokio = { workspace = true }
# The shared `spawn_proxy_core` LB-SUT primitive (in `src/lib.rs`) is reused by
# both this crate's `tests/common/mod.rs` (single-worker `spawn_lb_proxy`) and
# the `failover-harness` crate (multi-worker `spawn_proxy_inner`), so the
# LoadBalancer `ProxyCore` wiring is a normal dependency, not test-only.
sip-proxy = { path = "../sip-proxy" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# CANCEL-during-slow-decision test: wraps the decision engine to stall new_call.
async-trait = { workspace = true }
# Slice 3b: real RTP media through the signalling-only B2BUA. Media flows
# peer-to-peer on a separate simulated fabric to the addresses the SDP (relayed
# by the B2BUA) advertises; the classifier proves it reached the right peer.
media = { path = "../media" }
media-harness = { path = "../media-harness" }
# Limiter scenarios: a real LimiterServer on the simulated HTTP fabric, reached
# by the b2bua's HttpCallLimiter.
http-net = { path = "../http-net" }
call-limiter = { path = "../call-limiter" }
serde_json = { workspace = true }
# Slice 8 capstone: the out-of-tree `announcement` callflow service, injected
# into the SUT via `B2buaSut::start_with_services` for the early-media e2e.
announcement = { path = "../announcement" }
