[package]
name = "b2bua-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone runnable B2BUA process: binds a real UDP endpoint (non-recording RealSignalingNetwork) and routes every call to a fixed destination. For localhost SIPp load tests (UAC -> B2BUA -> UAS)."

[[bin]]
name = "b2bua-runner"
path = "src/main.rs"

[dependencies]
b2bua = { path = "../b2bua" }
call = { path = "../call" }
# Real HTTP transport for the call-limiter client (LIMITER_URL).
http-net = { path = "../http-net", features = ["real"] }
sip-net = { path = "../sip-net" }
sip-txn = { path = "../sip-txn" }
sip-clock = { path = "../sip-clock" }
# Replication wiring (S11): the real TCP transport + the shared membership seam
# (with the kube EndpointSlice informer feature for in-cluster discovery).
repl-net = { path = "../repl-net" }
topology = { path = "../topology", features = ["kube"] }
# Build a default in-cluster kube client for K8sMembership.
kube = { version = "1", default-features = false, features = ["client", "rustls-tls"] }
# rustls 0.23 ships no compile-time default CryptoProvider unless a provider
# feature is enabled; kube's `rustls-tls` doesn't pick one, so the process must
# install one before the first TLS handshake or the kube client panics at
# startup ("Could not automatically determine the process-level CryptoProvider").
# Pin `ring` (already in the tree) and install it at the top of main().
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { workspace = true }
async-trait = { workspace = true }
