[package]
name = "b2bua-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Standalone runnable B2BUA process: binds a real UDP endpoint (non-recording RealSignalingNetwork) and routes every call to a fixed destination. For localhost SIPp load tests (UAC -> B2BUA -> UAS)."

[[bin]]
name = "b2bua-runner"
path = "src/main.rs"

[dependencies]
b2bua = { path = "../b2bua" }
# The shared HTTP probe/metrics server: /metrics, /healthz, /ready, and the
# /debug/flamegraph pprof route — one module shared with the front proxy.
probe-http = { path = "../probe-http" }
# Out-of-tree callflow service (ADR-0016 slice 8) — composed into the production
# service registry (`compose_services`) so its diagram is generated alongside.
announcement = { path = "../announcement" }
call = { path = "../call" }
# Real HTTP transport for the call-limiter client (LIMITER_URL).
http-net = { path = "../http-net", features = ["real"] }
sip-net = { path = "../sip-net" }
sip-txn = { path = "../sip-txn" }
sip-clock = { path = "../sip-clock" }
# Replication wiring (S11): the real TCP transport + the shared membership seam
# (with the kube EndpointSlice informer feature for in-cluster discovery).
repl-net = { path = "../repl-net" }
topology = { path = "../topology", features = ["kube"] }
# Build a default in-cluster kube client for K8sMembership.
kube = { version = "1", default-features = false, features = ["client", "rustls-tls"] }
# rustls 0.23 ships no compile-time default CryptoProvider unless a provider
# feature is enabled; kube's `rustls-tls` doesn't pick one, so the process must
# install one before the first TLS handshake or the kube client panics at
# startup ("Could not automatically determine the process-level CryptoProvider").
# Pin `ring` (already in the tree) and install it at the top of main().
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { workspace = true }
async-trait = { workspace = true }
# CDR-on-RabbitMQ sink (cdr_rabbitmq.rs). lapin is runtime-agnostic; the two
# trait shims bind it to the running tokio runtime. serde_json encodes the CDR.
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
serde_json = { workspace = true }

# jemalloc global allocator (see the #[global_allocator] note in src/main.rs):
# glibc malloc ratchets RSS under sustained SIP churn (arena retention) and never
# returns memory to the OS, OOMing a long soak. jemalloc's decay purging bounds
# steady-state RSS. unix-only (jemalloc has no MSVC target).
[target.'cfg(not(target_env = "msvc"))'.dependencies]
# "profiling" builds bundled jemalloc with --enable-prof so the prof.* mallctls
# exist; activated at runtime via _RJEM_MALLOC_CONF=prof:true (small always-on
# overhead even when prof is inactive — acceptable for the leak-hunt soak). The
# /debug/heap route dumps live-allocation call stacks (jemalloc_stats::dump_profile).
tikv-jemallocator = { version = "0.7", features = ["profiling"] }
# Reads jemalloc's mallctl stats (RSS, purge backlog/activity, resolved decay
# config) back out as Prometheus text appended to /metrics — same cfg as the
# allocator so the ctl crate never links a second, unused jemalloc.
jemalloc-stats = { path = "../jemalloc-stats" }
