[package]
name = "call-limiter-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "The deployed call-limiter process: serves the limiter HTTP API + /metrics + /healthz over the real (hyper) transport, runs the periodic TTL-sweep janitor, and reads window/active/ttl config from the environment. Stateless, no persistence — shared cluster-wide as a single replica."

[dependencies]
http-net = { path = "../http-net", features = ["real"] }
call-limiter = { path = "../call-limiter" }
sip-clock = { path = "../sip-clock" }
tokio = { workspace = true }

[dev-dependencies]
http-net = { path = "../http-net", features = ["real"] }
serde_json = { workspace = true }
